# booktags

./: .gitignore  AUTHORS  COPYING  INSTALL  README.md  TODO  index.html  params.json
bak/: initialloadthread.h
bookcollection/: bookcollection.pro  directoryinitializer.cpp  directoryinitializer.h  filescanner.cpp  filescanner.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  programconfigfile.cpp  programinitializer.cpp  programinitializer.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui.autosave  superviseddirectorydialog.h
doc/: Doxyfile
src/: bookcollection.pro  bookstreemodel.cpp  bookstreemodel.h  booktags.pro  connectionfactory.cpp  connectionfactory.h  currentdirectoryconfigurer.cpp  currentdirectoryconfigurer.h  currentdirectorydialog.cpp  currentdirectorydialog.h  currentdirectorydialog.ui  database.cpp  database.h  databaseconnection.cpp  databaseconnection.h  directorydatabase.cpp  directorydatabase.h  directorydatabaseinitializer.cpp  directorydatabaseinitializer.h  directoryinitializer.cpp  directoryinitializer.h  filescanner.cpp  filetree.cpp  filetree.h  initialloadthread.cpp  initialloadthread.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  programconfigfile.cpp  programconfigfile.h  resources.qrc  scandirectorythread.cpp  scandirectorythread.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  statusbar.cpp  statusbar.h  superviseddirectorydialog.cpp  (+10 more)
tests/mutithreading_sqlite3/: CMakeLists.txt  main.cpp
tests/qobject/: main.cpp  qobject.pro
tests/sqlmodel/: booktags.sqlite3
tests/static_object_member/: a.out  main.cpp
(+59 files in other folders)
